# Topogenesis

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  FUNCTIONAL_ROLES.md  GETTING_STARTED.md  KNOWN_LIMITS.md  PRODUCTION_READINESS.md  PROJECT_THESIS.md  REFACTOR_STAGES.md  STRESS_VALIDATION.md
experiments/: run.py
godot/: ASSET_CREDITS.md  PRODUCTION_NOTES.md  README.md  icon.svg.import  project.godot  run_with_bridge.ps1
godot/assets/quaternius/fantasy_props/: Preview_1.jpg.import  Preview_2.jpg.import  Preview_3.jpg.import
godot/assets/quaternius/medieval_village/: Preview.jpg.import
godot/assets/quaternius/stylized_nature/: Preview_1.jpg.import  Preview_2.jpg.import  Preview_3.jpg.import  Preview_4.jpg.import
godot/scenes/: main.tscn
godot/scripts/: debug_hud.gd  debug_hud.gd.uid  game_director.gd  game_director.gd.uid  main.gd  main.gd.uid  npc_controller.gd  npc_controller.gd.uid  player_controller.gd  player_controller.gd.uid  topogenesis_bridge.gd  topogenesis_bridge.gd.uid  validate_project.gd  validate_project.gd.uid
tests/: test_functional_roles.py  test_game_bridge.py  test_jit_runtime.py  test_npc_cognition.py  test_scaffold.py  test_stress_validation.py
topogenesis/: __init__.py  engine.py
topogenesis/analysis/: __init__.py  metrics.py
topogenesis/core/: __init__.py  engine_adapter.py  experiments.py
topogenesis/game_bridge/: __init__.py  server.py  state.py
topogenesis/npc/: __init__.py  _math.py  affect.py  communication.py  imagination.py  needs.py  social.py
(+446 files in other folders)
