[project]
name = "topogenesis"
version = "0.1.0"
description = "Field-coupled artificial-life ecology platform"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
  "jax",
  "numpy",
  "optax",
]

[project.scripts]
topogenesis = "experiments.run:main"
topogenesis-bridge = "topogenesis.game_bridge.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
